# comfyui-mcp

./: .dockerignore  .env.example  .gitattributes  .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  PACK-SPLIT-STATUS.md  README.md  ROADMAP.md  TODO.md  llms-install.md  model-settings.json  model-settings.user.jsonc.example  package-lock.json  package.json  server.json  tsconfig.json  vitest.config.ts
.beads/: metadata.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: build-runpod-image.yml  ci.yml  packs.yml  release.yml
arena-results-bakeoff/: arena-results.json  trajectories.jsonl
arena-results-bakeoff-12b/: arena-results.json  trajectories.jsonl
arena-results-full/: arena-results.json  trajectories.jsonl
arena-results-full-pod/: trajectories.jsonl
arena-results-panel/: trajectories.jsonl
blog/: comfyui-mcp-tdqs-case-study.md
claude-plugin/: .mcp.json
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/agents/: comfy-explorer.md
claude-plugin/commands/: comfy-gen.md  comfy-skill.md  comfy-viz.md
design/: embedded-agent-panel.md  remote-and-cloud-modes.md
docker/runpod/: .gitattributes  Dockerfile  README.md  config.ini  deploy-dockerhub.sh  extra_model_paths.yaml  nginx.conf  post_start.sh  starting.html  test_image.sh  verify_image_remote.py
docs/: README.md  arena.mdx  backends.mdx  cloud-deployment.mdx  concepts.mdx  configuration.mdx  docs.json  index.mdx  installation.mdx  local-llms.mdx  panel.mdx  plugin.mdx  quickstart.mdx  remote-connector.mdx  self-hosted-relay.mdx  troubleshooting.mdx
docs/blog/: anima-comfyui.mdx  comfyui-agent-claude-or-chatgpt.mdx  comfyui-mcp-tdqs-case-study.mdx  ernie-image-comfyui.mdx  ideogram-4-comfyui.mdx  index.mdx  installer-packs-that-cant-rot.mdx  krea2-comfyui.mdx  ltx-2.3-comfyui.mdx  panel-agent-subscription.mdx  (+10 more)
finetune/: README.md
hooks/: hooks.json
packs/: README.md
plugin/: .mcp.json
plugin/skills/comfyui-node-registry/references/: pyproject.toml
scripts/: arena-bestof.mjs  arena-graphic.mjs  arena-scenarios.mjs  check-model-urls.mjs  check-pack-models.mjs  codex-comfyui-mcp-check.mjs  codex-knowledge-parity-smoke.mjs  codex-parity-smoke.mjs  gen-pack-installers.mjs  gen-tool-docs.ts  generation-stats.mjs  llm-arena-full.mjs  llm-arena.mjs  mock-graph.mjs  mock-panel.mjs  panel-arena.mjs  panel-load-workflow-smoke.mjs  panel-sim.mjs  panel-smoke.mjs  postinstall.mjs  probe-bridge.mjs  probe-models.mjs  runpod-release.mjs  slice-pipeline.mjs  smoke-install.mjs  sync-agents.mjs  test-agent.mjs  test-local-llm.mjs  test-packs.sh  validate-manifests.mjs  verify-render.mjs
src/: config.ts  index.ts
(+653 files in other folders)
